Fixed strange issue with navbar spacing at ~1000px

--- a/src/Header.css
+++ b/src/Header.css
@@ -60,7 +60,7 @@ header {
   width: 100%;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 1024px) {
   .nav-links {
     gap: 22px;
   }
